# pace-2021

./: CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp
include/: CollectionOperators.h  Makros.h
include/CONTESTS/PACE21/: main_CE.h  test_graphs.h
include/CONTESTS/PACE21/heur/: Cluster.h  ClusterGraph.h  Config.h  ConvexHullTrickDynamic.h  ExpansionOrder.h  Global.h  PaceUtils.h  Solver.h  State.h
include/CONTESTS/PACE21/heur/EOCreators/: ComponentExpansion.h
include/CONTESTS/PACE21/heur/StateImprovers/: NEG.h  NodeEdgeGreedy.h  NodeEdgeGreedyNomap.h  NodeEdgeGreedyW1.h  SparseGraphTrimmer.h
include/CONTESTS/PACE21/heur/SwapCandidates/: ComponentExpansionAttraction.h  ComponentExpansionRepulsion.h  SwapCandidate.h  SwpCndEO.h  SwpCndEdge.h  SwpCndNode.h  SwpCndTriangle.h
include/CONTESTS/PACE21/heur/weird_ideas/: VCIterator1.h
include/CONTESTS/PACE21/kernelization/: CEKernelizer.h  CriticalClique.h
include/combinatorics/: CombinatoricUtils.h
include/combinatorics/sequences/: Sorting.h
include/combinatorics/sequences/combinations/: Combinations.h
include/datastructures/: Heap.h  MyPQ.h
include/datastructures/segmenttrees/: SegmentTreeUtils.h
include/datastructures/segmenttrees/dynamic/: MMTreeD.h  OrdTreeD.h  SumTreeD.h
include/datastructures/segmenttrees/static/: CovTreeS.h  MMTreeS.h  OrdTreeS.h  SumTreeS.h
include/graphs/: GraphInducer.h  GraphTrimmer.h  GraphUtils.h  GraphWriter.h
include/graphs/cliques/: CliqueExtension.h  CliqueUtils.h
include/graphs/components/: ConnectedComponents.h
include/utils/: MemoryUtils.h  RandomNumberGenerators.h  StandardUtils.h  TimeMeasurer.h
src/CONTESTS/PACE21/: main_CE.cpp  test_graphs.cpp
src/CONTESTS/PACE21/heur/: Cluster.cpp  ClusterGraph.cpp  Config.cpp  ExpansionOrder.cpp  Global.cpp  PaceUtils.cpp  Solver.cpp  State.cpp
src/CONTESTS/PACE21/heur/EOCreators/: ComponentExpansion.cpp
src/CONTESTS/PACE21/heur/StateImprovers/: NEG.cpp  NodeEdgeGreedy.cpp  NodeEdgeGreedyNomap.cpp  NodeEdgeGreedyW1.cpp  SparseGraphTrimmer.cpp
src/CONTESTS/PACE21/heur/SwapCandidates/: ComponentExpansionAttraction.cpp  ComponentExpansionRepulsion.cpp  SwapCandidate.cpp  SwpCndEO.cpp  SwpCndEdge.cpp  SwpCndNode.cpp  SwpCndTriangle.cpp
src/CONTESTS/PACE21/heur/weird_ideas/: VCIterator1.cpp
src/CONTESTS/PACE21/kernelization/: CEKernelizer.cpp  CriticalClique.cpp
src/CONTESTS/PACE21/unit_tests/: test_CEKernelizer.cpp  test_ComponentExpansion.cpp  test_ComponentExpansionAttraction.cpp  test_ComponentExpansionRepulsion.cpp  test_ConvexHullTrickDynamic.cpp  test_NodeEdgeGreedy.cpp  test_Solver.cpp  test_State.cpp  test_SwapCandidate.cpp  test_SwpCndEO.cpp  test_SwpCndEdge.cpp  test_SwpCndNode.cpp  test_SwpCndTriangle.cpp
src/combinatorics/: CombinatoricUtils.cpp
src/combinatorics/sequences/: Sorting.cpp
src/datastructures/: MyPQ.cpp
src/graphs/: GraphInducer.cpp  GraphReader.cpp  GraphTrimmer.cpp  GraphUtils.cpp
src/graphs/cliques/: CliqueExtension.cpp  CliqueUtils.cpp
src/graphs/unit_tests/: test_GraphTrimmer.cpp
src/utils/: StandardUtils.cpp  TimeMeasurer.cpp
